# FinRL

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docker/: Dockerfile
docs/: Makefile  make.bat
docs/source/: conf.py  faq.rst  index.rst
docs/source/developer_guide/: contributing.rst  development_setup.rst  file_architecture.rst
docs/source/finrl_meta/: Benchmark.rst  Data_layer.rst  Environment_layer.rst  background.rst  overview.rst
docs/source/reference/: publication.md  publication.rst  reference.md
docs/source/start/: first_glance.rst  installation.rst  introduction.rst  quick_start.rst  three_layer.rst
docs/source/tutorial/: 1-Introduction.rst  2-Advance.rst  3-Practical.rst  4-Optimization.rst  5-Others.rst  Guide.rst  Homegrown_example.rst
examples/: FinRL_Ensemble_StockTrading_ICAIF_2020.ipynb  FinRL_GPM_Demo.ipynb  FinRL_PaperTrading_Demo.ipynb  FinRL_PaperTrading_Demo_refactored.py  FinRL_PortfolioOptimizationEnv_Demo.ipynb  README.md  Stock_NeurIPS2018_1_Data.ipynb
finrl/: README.md  config.py  config_tickers.py  trade.py
finrl/agents/elegantrl/: models.py
finrl/agents/portfolio_optimization/: README.md  models.py
finrl/agents/rllib/: models.py
finrl/agents/stablebaselines3/: hyperparams_opt.py  models.py  tune_sb3.py
finrl/applications/Stock_NeurIPS2018/: README.md
finrl/applications/imitation_learning/: README.md
finrl/applications/stock_trading/: ensemble_stock_trading.py  fundamental_stock_trading.py  stock_trading.py  stock_trading_rolling_window.py
(+14 files in other folders)
